[package]
name = "pqbip39"
version = "0.1.0"
edition = "2021"

[dependencies]
hmac = { version = "0.12.1", default-features = false }
sha2 = { version = "0.10.9", features = ["asm", "asm-aarch64"], default-features = false }
thiserror = { version = "2.0.12", default-features = false }
zeroize = { version = "1.8.1", features = ["zeroize_derive"], default-features = false, optional = true }

[dev-dependencies]
hex = "0.4.3"
rand = "0.9.1"

[features]
default = ["std"]
std = []
