[package]
name = "pqbip39"
version = "0.2.0"
edition = "2021"
authors = ["Rinat hicc0rus@gmail.com"]
description = "A no_std compatible implementation of the BIP39 mnemonic code standard."
license = "MIT"
repository = "https://github.com/openzebra/pq_bip39.rs"
readme = "README.md"
keywords = ["bip39", "mnemonic", "bitcoin", "crypto", "no-std"]
categories = ["cryptography", "no-std"]

[dependencies]
hmac = { version = "0.13.0", default-features = false }
secrecy = "0.10.3"
sha2 = { version = "0.11.0", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
unicode-normalization = { version = "0.1.25", default-features = false, optional = true }
zeroize = { version = "1.8.2", features = ["zeroize_derive"], default-features = false, optional = true }

[dev-dependencies]
hex = "0.4.3" 
rand = "0.9.1" 

[features]
default = ["std"]
std = ["unicode-normalization/std"]
zeroize = ["dep:zeroize"]
